--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Hamba</string>
+    <string name="label_login">LogIn</string>
+    <string name="label_cadastro">Cadastro</string>
+    <string name="label_home">Home</string>
+    <string name="label_escolha">Escolha</string>
+    <string name="button_entrar">ENTRAR</string>
+    <string name="button_criar_conta">CRIAR CONTA</string>
+    <string name="text_click_esqueceu_senha">Esqueceu a senha?</string>
+    <string name="img_logo">logo</string>
 </resources>
