--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,12 @@
     <string name="text_view_conf_senha_nova">Confirme sua senha nova</string>
     <string name="edit_text_conf_email_novo">Confirme seu e-mail novo</string>
     <string name="img_text_foto_avatar">Imagem do Avatar</string>
+    <string name="title_activity_configuracoes1">configuracoes1Activity</string>
+    <string name="title_section1">Section 1</string>
+    <string name="title_section2">Section 2</string>
+    <string name="title_section3">Section 3</string>
+    <string name ="button_apagar_conta">Apagar conta</string>
+    <string name="action_example">Example action</string>
 
 
 </resources>
