--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,8 +56,9 @@
     <string name="title_section1">Section 1</string>
     <string name="title_section2">Section 2</string>
     <string name="title_section3">Section 3</string>
-    <string name ="button_apagar_conta">Apagar conta</string>
+    <string name="button_apagar_conta">Apagar conta</string>
     <string name="action_example">Example action</string>
+    <string name="apresentacao">Bem Vindo</string>
 
 
 </resources>
