--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,14 @@
     <string name="button_apagar_conta">Apagar conta</string>
     <string name="action_example">Example action</string>
     <string name="apresentacao">Bem Vindo</string>
+    <string name="button_mudar_email">ALTERAR DADOS PESSOAIS</string>
+    <string name="button_mudar_senha">ALTERAR SENHA</string>
+    <string name="button_apagar_contaA">APAGAR CONTA</string>
+    <string name="text_view_novo_nome">Novo nome</string>
+    <string name="text_view_novo_email">Novo Email</string>
+    <string name="text_view_senha_atual">Senha Atual</string>
+    <string name="text_view_nova_senha">Nova Senha</string>
+    <string name="text_view_confirmar_nova_senha">Confirmar Nova Senha</string>
 
 
 </resources>
