--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -138,5 +138,7 @@
     <string name="text_check_marcar_todos_ep">Marcar todos os episódios</string>
     <string name="text_numero_episodio">Episódio X</string>
     <string name="text_numero_episodio_desc">Descrição</string>
+    <string name="button_marcar_ep_ass">Marcar episódios assistidos</string>
+    <string name="label_checkbox_ep_assistidos">Marcar episódios assistidos</string>
 
 </resources>
