--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -141,5 +141,12 @@
     <string name="button_marcar_ep_ass">Marcar episódios assistidos</string>
     <string name="label_checkbox_ep_assistidos">Marcar episódios assistidos</string>
     <string name="Confirmar">CONFIRMAR</string>
+    <string name="img_titulo_sele_avaliacao">Imagem do titulo para avaliação</string>
+    <string name="text_resultado_user_avaliacao_titulo">Resultado :</string>
+    <string name="text_avaliar_titulo">Avaliar: </string>
+    <string name="label_user_avaliar_titulo">Avaliar titulo</string>
+    <string name="label_recomendados">Recomendados</string>
+    <string name="ic_avaliar_titulo">Avaliar titulo</string>
+    <string name="text_titulo_media_geral">Média geral :</string>
 
 </resources>
