--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,7 @@
     <string name="Search">Pesquisar</string>
     <string name="nav_inicio_text">Inicio</string>
     <string name="nav_meu_hamba_text">Meu Hamba</string>
-    <string name="nav_calendario_text">Calendário</string>
+    <string name="nav_Sair_text">Sair</string>
     <string name="nav_favoritos_text">Favoritos</string>
     <string name="nav_recomendacoes_text">Recomendações</string>
     <string name="nav_configuracoes_text">Configurações</string>
