--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -148,5 +148,6 @@
     <string name="label_recomendados">Recomendados</string>
     <string name="ic_avaliar_titulo">Avaliar Título </string>
     <string name="text_titulo_media_geral">Média geral :</string>
+    <string name="label_tela_recomendacao">Recomendação</string>
 
 </resources>
